# glin-forge

./: .gitignore  Cargo.toml  GLIN_FORGE_RESEARCH.md  INSTALLATION_GUIDE.md  LICENSE  PHASE1_SDK_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_PROGRESS.md  PRE_PUBLISH_CHECKLIST.md  PUBLISHING_GUIDE.md  PUBLISH_V0.2.0.md  QUICK_START.md  README.md  READY_TO_PUBLISH.md  RELEASING.md  SUBXT_0.44_RESEARCH_REPORT.md  version.json
.github/workflows/: release.yml
docs/: PHASE3_TYPEGEN.md  SDK_ARCHITECTURE.md
examples/dao-governance/: README.md  glinforge.config.ts  package.json
examples/nft-marketplace/: README.md  glinforge.config.ts  package.json
examples/token-dapp/: README.md  glinforge.config.ts  package.json
examples/token-dapp/scripts/: deploy.ts
examples/token-dapp/test/: token.test.ts
scripts/: build-release.sh  bump-version.sh  deploy-simple.ts  deploy-vlawyer.ts  interact-existing.ts  phase2-complete-example.ts  phase2-events.ts  phase2-network-utils.ts  phase2-transactions.ts  phase3-complete-example.ts  phase3-typegen.ts  publish-npm.sh  release.sh  sync-version.sh  test-local.sh  test-phase3.ts  update-version.sh  validate-release.sh
src/: main.rs
src/cli/: account.rs  analyze.rs  balance.rs  build.rs  call.rs  clean.rs  config.rs  console.rs  deploy.rs  init.rs  instantiate.rs  mod.rs  network.rs  new.rs  query.rs  run.rs  test.rs  typegen.rs  upload.rs  verify.rs  watch.rs
src/codegen/: hooks.rs  metadata.rs  mod.rs  type_resolver.rs  types.rs  typescript.rs
src/config/: file.rs  mod.rs
src/contract/: chain_info.rs  metadata_fetcher.rs  mod.rs
src/network/: mod.rs
src/rpc/: methods.rs  mod.rs  server.rs  types.rs
templates/config/: glinforge.config.fullstack.ts  glinforge.config.minimal.ts  glinforge.config.ts
templates/dao/: Cargo.toml.hbs  lib.rs.hbs
templates/erc20/: lib.rs.hbs
templates/erc721/: lib.rs.hbs
templates/frontend/react/: App.css.hbs  App.tsx.hbs  config.ts.hbs  index.css.hbs  vite.config.ts.hbs
types/: flipper.ts
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: intro.md
website/docs/advanced/: contract-verification.md  custom-networks.md  deterministic-deploy.md  factory-pattern.md  gas-estimation.md  metadata-parsing.md  scale-encoding.md
website/docs/cli-reference/: overview.md
website/docs/code-generation/: overview.md  react-hooks.md  type-mapping.md  typescript-types.md
website/docs/configuration/: accounts.md  config-file.md  environment-variables.md  networks.md
website/docs/examples/: dao-governance.md  dex-contract.md  erc20-token.md  frontend-dapp.md  nft-collection.md
website/docs/getting-started/: first-contract.md  installation.md  prerequisites.md  quick-start.mdx
website/docs/guides/: account-management.md  building-contracts.md  contract-interaction.md  deploying-mainnet.md  deploying-testnet.md  event-handling.md  frontend-integration.md  gas-optimization.md  multi-network.md  testing-strategies.md
website/docs/reference/: changelog.md  error-codes.md  networks.md
website/docs/templates/: custom-templates.md  dao.md  erc20.md  erc721.md  overview.md
website/docs/troubleshooting/: build-errors.md  common-errors.md  deployment-errors.md  (+2 more)
(+22 files in other folders)
