[package]
name = "glin-forge"
version = "0.1.0"
edition = "2021"
authors = ["GLIN AI <dev@glin.ai>"]
description = "Smart contract development CLI for GLIN Network"
license = "Apache-2.0"
repository = "https://github.com/glin-ai/glin-forge"
keywords = ["blockchain", "smart-contracts", "ink", "substrate", "cli"]

[dependencies]
# GLIN SDK
glin-client = { path = "../glin-sdk-rust/glin-client" }
glin-contracts = { path = "../glin-sdk-rust/glin-contracts" }
glin-types = { path = "../glin-sdk-rust/glin-types" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Substrate & Contract interaction
subxt = "0.44"
subxt-signer = "0.44"
subxt-core = "0.44"

# Contract metadata & compilation
ink_metadata = "5.1"
scale = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
scale-info = { version = "2.11", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
hex = "0.4"
sp-core-hashing = "15.0"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Template rendering
handlebars = "5.1"

[dev-dependencies]
tempfile = "3.13"
