[package]
name = "glin-forge"
version = "0.2.1"
edition = "2021"
authors = ["GLIN AI <dev@glin.ai>"]
description = "Smart contract development CLI for GLIN Network - Build, deploy, and interact with ink! smart contracts"
license = "Apache-2.0"
repository = "https://github.com/glin-ai/glin-forge"
homepage = "https://glinforge.com"
documentation = "https://glinforge.com"
readme = "README.md"
keywords = ["blockchain", "smart-contracts", "ink", "substrate", "cli"]
categories = ["command-line-utilities", "development-tools", "cryptography::cryptocurrencies"]

[dependencies]
# GLIN SDK
glin-client = "0.1"
glin-contracts = "0.1"
glin-types = "0.1"

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"

# Substrate & Contract interaction
subxt = "0.44"
subxt-signer = "0.44"
subxt-core = "0.44"

# Contract metadata & compilation
ink_metadata = "5.1"
scale = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
scale-info = { version = "2.11", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
hex = "0.4"
sp-core-hashing = "15.0"
rand = "0.8"

# HTTP client (using rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Template rendering
handlebars = "5.1"

# JSON-RPC server for SDK bridge
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"

# Process execution
which = "7.0"

[dev-dependencies]
tempfile = "3.13"
